Fix previous commit

--- a/index.html
+++ b/index.html
@@ -1,25 +1,6 @@
-﻿# pluto-tv-de-channels
-**Description:** Pluto TV (DE) Channel information
-
-**Disclaimer:** All information is publicly accessible for anyone with Germany IP address
-
-The following file contains the raw data: [pluto-tv-de_channels.json](pluto-tv-de_channels.json)
-
-Where inserted, the item `featuredOrder` has been removed from the individual channels as it seems to be a ever changing value.
-
-## Access the channels m3u8 streams
-It's possible to access the channels m3u8 by inserting the id # of the channel.
-
-The way it works is:<br>
-`https://service-stitcher-ipv4.clusters.pluto.tv/v2/stitch/hls/channel/{channel_id}/master.m3u8`<br>
-(Replace `{channel_id}` with the respective value of the  id # field of the channel.)
-
-## Changes to PlutoTV channels*
-*_since the existance of this project_
-### January 2023
-* 2023-01-06: [new channel] "Pluto TV liebt Elvis" has been added (pop-up channel: _declared to be short-lived in summary_)
-
-## Channels on PlutoTV in Germany
+﻿<html><head><title>Pluto-TV (DE) Channels</title></head>
+<body>
+<h1>Channels on PlutoTV in Germany</h1>
 
 <table>
 	<tr>
