Add custom CSS for html table

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-﻿<html><head><title>Pluto-TV (DE) Channels</title></head>
+﻿<html>
+<head>
+	<title>Pluto-TV (DE) Channels</title>
+	<style>body {background-color: black; color:white}
+table {background-color: gray}
+table td,th {background-color: black}
+table a:link {color:green}
+table a:visited {color:orange}
+table a:hover {color:grey}
+table a:active {color:yellow}
+	</style>
+</head>
 <body>
 <h1>Channels on PlutoTV in Germany</h1>
 
